--- a/index.html
+++ b/index.html
@@ -23,35 +23,40 @@
 
       <div class="panel-body">
 
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Propinsi</label>
-          <div class="col-sm-10">
-            <select id="propinsi" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
-          </div>
-        </div>
+        <div class="form-horizontal">
 
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Kabupaten</label>
-          <div class="col-sm-10">
-            <select id="kabupaten" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Propinsi</label>
+            <div class="col-sm-10">
+              <select id="propinsi" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Kecamatan</label>
-          <div class="col-sm-10">
-            <select id="kecamatan" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Kabupaten</label>
+            <div class="col-sm-10">
+              <select id="kabupaten" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label">Kelurahan</label>
-          <div class="col-sm-10">
-            <select id="kelurahan" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Kecamatan</label>
+            <div class="col-sm-10">
+              <select id="kecamatan" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+            </div>
           </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Kelurahan</label>
+            <div class="col-sm-10">
+              <select id="kelurahan" class="form-control selectpicker" title="-- Pilih --" data-live-search="true"></select>
+            </div>
+          </div>
+
         </div>
 
       </div>
+
     </div>
   </div>
 
